--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ S3method(ci,intermed)
 S3method(print,intermed)
 export(ci)
 export(intermed)
+importFrom(SuperLearner,All)
 importFrom(SuperLearner,SuperLearner)
 importFrom(SuperLearner,trimLogit)
-importFrom(assertthat,assert_that)
 importFrom(data.table,as.data.table)
 importFrom(data.table,setnames)
 importFrom(future.apply,future_lapply)
