--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 2.3.1
-pkgdown: 1.3.0
+pandoc: 2.11.3.1
+pkgdown: 1.6.1
 pkgdown_sha: ~
-articles:
-  using_drtmle: using_drtmle.html
+articles: {}
+last_built: 2021-06-30T20:38Z
 
